fix content jumping

--- a/static/spectrum.css
+++ b/static/spectrum.css
@@ -16,6 +16,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .vertical-center {
